# hal_stm32

stm32cube/: CMakeLists.txt
stm32cube/stm32f7xx/: CMakeLists.txt
stm32cube/stm32f7xx/drivers/include/: stm32f7xx_hal_mmc.h  stm32f7xx_ll_sdmmc.h
stm32cube/stm32f7xx/drivers/src/: stm32f7xx_hal_dma.c  stm32f7xx_hal_mmc.c  stm32f7xx_hal_sd.c  stm32f7xx_ll_rtc.c  stm32f7xx_ll_sdmmc.c
